--- a/mainform.lfm
+++ b/mainform.lfm
@@ -1,13 +1,15 @@
 object Form1: TForm1
-  Left = 814
+  Left = 851
   Height = 129
   Top = 293
   Width = 393
+  AllowDropFiles = True
   Caption = 'Picture Join'
   ClientHeight = 129
   ClientWidth = 393
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  OnDropFiles = FormDropFiles
   LCLVersion = '1.8.0.6'
   object OpenLeftPicture: TButton
     Left = 24
@@ -37,14 +39,21 @@ object Form1: TForm1
     OnClick = CombineClick
     TabOrder = 2
   end
+  object StatusLabel: TLabel
+    Left = 24
+    Height = 1
+    Top = 112
+    Width = 1
+    ParentColor = False
+  end
   object BrowsePicture: TOpenDialog
     Filter = 'Pictures|*.jpg; *.png; *.jpeg'
     left = 32
-    top = 80
+    top = 56
   end
   object SavePictureDialog: TSavePictureDialog
     Filter = 'Picture|*.jpg'
     left = 328
-    top = 80
+    top = 56
   end
 end
